# streflopx

./: .gitignore  CMakeLists.txt  FPUSettings.arm64.h  FPUSettings.asm  FPUSettings.h  Makefile  Makefile.common  Makefile.soft.common  Math.cpp  Random.cpp  SMath.h  SoftFloatWrapper.cpp  System.h  arithmeticTest.cpp  compareFloats.cpp  compare_floats.cpp  randomTest.cpp  streflop.h
.github/workflows/: build_test.yml
cmake/: gcc_x86_64-pc-windows-gnu.cmake  streflop-config.cmake.in
libm/: Makefile  e_expf.c
libm/dbl-64/: e_acosh.cpp  e_atanh.cpp  e_cosh.cpp  e_exp.cpp  e_exp2.cpp  e_fmod.cpp  e_gamma_r.cpp  e_hypot.cpp  e_j0.cpp  e_j1.cpp  e_jn.cpp  e_lgamma_r.cpp  e_log10.cpp  e_log2.cpp  e_rem_pio2.cpp  e_sinh.cpp  k_rem_pio2.cpp  k_tan.cpp  s_asinh.cpp  s_atan.cpp  s_cbrt.cpp  s_ceil.cpp  s_copysign.cpp  s_erf.cpp  s_expm1.cpp  s_fabs.cpp  s_finite.cpp  s_floor.cpp  s_fpclassify.cpp  s_frexp.cpp  s_ilogb.cpp  s_isinf.cpp  s_isnan.cpp  s_ldexp.cpp  s_llrint.cpp  s_llround.cpp  s_log1p.cpp  s_logb.cpp  s_lrint.cpp  s_lround.cpp  (+14 more)
libm/flt-32/: e_atanhf.cpp  e_j0f.cpp  e_j1f.cpp  e_jnf.cpp  s_erff.cpp
libm/ldbl-96/: s_cbrtl.cpp
patches/: 02_gcc-fixes.diff  05_unit_testing.diff
softfloat/: softfloat-specialize
